# software-engineering-pattern

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  antora-playbook.yml  antora.yml
pattern/: antora.yml  index.adoc
pattern/behavioral/: index.adoc  main.adoc
pattern/behavioral/memento/: diagrams.puml  index.adoc
pattern/behavioral/memento/src/: originator.hpp
pattern/creational/: index.adoc  main.adoc
pattern/creational/abstract_factory/: diagrams.puml  index.adoc
pattern/creational/abstract_factory/src/: abstract_factory.hpp  abstract_product.hpp  concrete_factory_a.hpp  concrete_factory_b.hpp  concrete_product_a.hpp  concrete_product_b.hpp  main.cpp
pattern/creational/builder/: diagrams.puml  index.adoc
pattern/creational/builder/src/: builder.hpp  concrete_builder.hpp  director.hpp  main.cpp  object.hpp
pattern/creational/factory_method/: diagrams.puml  index.adoc
pattern/creational/factory_method/src/: concrete_factory.hpp  concrete_object.hpp  factory.hpp  main.cpp  object.hpp
pattern/creational/prototype/: diagrams.puml  index.adoc
pattern/creational/prototype/src/: main.cpp  prototype.hpp
pattern/creational/singleton/: diagrams.puml
pattern/creational/singleton/src/: singleton.hpp
pattern/modules/ROOT/pages/: index.adoc
pattern/structural/: index.adoc
pattern/structural/decorator/: main.adoc
pattern/structural/decorator/src/: component.hpp  decorator.hpp  main.cpp
pattern/structural/flyweight/: diagrams.puml  index.adoc
pattern/structural/singleton/: diagrams.puml  index.adoc
supplemental-ui/partials/: header-content.hbs
(+16 files in other folders)
